--- a/ms_2_intro_res_disc.Rmd
+++ b/ms_2_intro_res_disc.Rmd
@@ -38,13 +38,13 @@ Knowing where individuals of a species live is fundamental to the sciences of ec
  and managing and protecting species effectively.
 A rich literature tackles the many dimensions of these questions.
 
-One major outcome of this body of science is the various compiled databases of species distribution maps. Two global-scale repositories predict marine species ranges throughout the world's oceans – AquaMaps (Kaschner et al. 2013) and International Union for Conservation of Nature (IUCN) (REF).  These two spatial datasets have been used for a wide range of purposes, including assessing marine species status (Halpern et al. 2012, 2015 _both_; Selig et al. 2013 _both_), evaluating global biodiversity patterns (Coll et al. 2010 _AM_; Martin et al. 2014 _both and others_, Pimm 2014 _IUCN, mostly focusing on terrestrial but some marine_), predicting range shifts (Molinos et al. 2015 _AquaMaps_, and setting conservation priorities (Klein et al. 2015 _AquaMaps_). <!-- BSH: Any of these use IUCN?  Would be good to make sure at least 2-3 examples were based on IUCN. ___none of these exclusively use IUCN - other suggestions?___-->
+One major outcome of this body of science is the various compiled databases of species distribution maps. Two global-scale repositories predict marine species ranges throughout the world's oceans – AquaMaps (Kaschner et al. 2013) and International Union for Conservation of Nature (IUCN) (REF).  These two spatial datasets have been used for a wide range of purposes, including assessing marine species status (Halpern et al. 2012, 2015 _both_; Selig et al. 2013 _both_), evaluating global biodiversity patterns (Coll et al. 2010 _AM_; Martin et al. 2014 _both and others_, Pimm et al. 2014 _IUCN, mostly focusing on terrestrial but some marine_, Kaschner et al. 2011), predicting range shifts (Molinos et al. 2015 _AquaMaps_, and setting conservation priorities (Klein et al. 2015 _AquaMaps_).
 
 ___BSH:___ _I think Julie makes this comment below, but we may need to be able to substantiate this somehow.  Is there a way to quickly figure out how many studies have used AM vs. IUCN?_  
 
 ___CCO:___ _What about age - AquaMaps is pretty recent (2006 at earliest); before that, would IUCN have been the dominant dataset for marine?  Maybe we can track citations of AquaMaps, but citations of IUCN are generic - just cite the Red List - not referencing spatial information specifically, much less marine.  Going by citation year field on the maps themselves, the oldest marine record I can find is 2004._
 
-_Four foundational papers relating to AquaMaps (Kaschner et al. 2006, 2011; 2013; Ready et al. 2010) have been cited a total of 379 times._
+_Three foundational papers relating to AquaMaps (Kaschner et al. 2006, 2011; Ready et al. 2010) have been cited a total of 315 times._
 
 The two datasets ostensibly describe the same information, but significant differences in methodology and intent could lead to dramatically different understandings of our marine ecosystems, with significant implications for policy and conservation recommendations.  Importantly, biases in taxonomic or spatial coverage within a dataset could shift management and conservation actions away from places or species that are most in need.  Inaccurate indications of presence or absence could lead to ineffective marine reserve systems and management plans (Rondinini et al. 2006) (Jetz 2008?).
 
@@ -58,9 +58,9 @@ We then reexamine two recent marine biodiversity studies - an assessment of the 
 
 ## How and why the datasets differ
 
-The IUCN publishes species range maps, bundled by taxonomic groups (REF), based on expert input on spatial boundaries of a given species' "limits of distribution" (REF IUCN 2014) - essentially a refined extent of occurrence, based on observation records and refined by expert understanding of the species' range and habitat preferences.  In contrast, AquaMaps models species distribution based environmental preferences (e.g. temperature, depth, salinity) deduced from occurrence records, published species databases such as FishBase, and expert knowledge.  The AquaMaps model overlays these environmental preferences atop a map of environmental attributes on a 0.5 degree grid, creating a global raster of probability of occurrence for each species (AquaMaps 2013)
+The IUCN publishes species range maps, bundled by taxonomic groups, based on expert input on spatial boundaries of a given species' "limits of distribution" (IUCN 2015) - essentially a refined extent of occurrence, based on observation records and refined by expert understanding of the species' range and habitat preferences.  In contrast, AquaMaps models species distribution based environmental preferences (e.g. temperature, depth, salinity) deduced from occurrence records, published species databases such as FishBase, and expert knowledge.  The AquaMaps model overlays these environmental preferences atop a map of environmental attributes on a 0.5 degree grid, creating a global raster of probability of occurrence for each species (Kaschner et al. 2006, Ready et al. 2010)
 
-The methodologies behind these datasets imply differences in prediction of species distribution due to errors of commission (falsely _(erroneously? less accusatory, but an annoying word)_ indicating species presence) and omission (falsely indicating species absence).  Geographic range data such as IUCN range maps generally include large commission errors, while predicted distribution models such as AquaMaps will likely include fewer commission errors but more omission errors.  Each type of error bears different implications for conservation goals: commission errors can result in prioritizing areas not relevant to conservation goals, while omission errors may result in protected area networks that fail to include important habitat and range <!-- from Rondinini: Omission errors lead to identifying networks of areas for conservation action that are smaller than required and centred on known species occurrences, thus affecting the comprehensiveness, representativeness and efficiency of selected areas. Commission errors lead to selecting areas not relevant to conservation, thus affecting the representativeness and adequacy of reserve network --> (Rondinini, 2006). 
+The methodologies behind these datasets imply differences in prediction of species distribution due to errors of commission (falsely _(erroneously? less accusatory, but an annoying word)_ indicating species presence) and omission (falsely indicating species absence).  Geographic range data such as IUCN range maps generally include large commission errors, while predicted distribution models such as AquaMaps will likely include fewer commission errors but more omission errors.  Each type of error bears different implications for conservation goals: commission errors can result in prioritizing areas not relevant to conservation goals, while omission errors may result in protected area networks that fail to include important habitat and range <!-- from Rondinini: Omission errors lead to identifying networks of areas for conservation action that are smaller than required and centred on known species occurrences, thus affecting the comprehensiveness, representativeness and efficiency of selected areas. Commission errors lead to selecting areas not relevant to conservation, thus affecting the representativeness and adequacy of reserve network --> (Rondinini et al. 2006). 
 <!-- This study basically predicted some of the problems we’re seeing here and predicts implications; I’d like to meaningfully acknowledge it, but not sure how deeply to get into it.  Later comments ask about whether to include the omission/commission terminology. 
 
 BSH: I haven’t read the paper, but it sounds like we need to acknowledge what was already discussed/done there.  This may actually simplify things, such that we condense the first three paragraphs of this section into a single paragraph that restates what that paper found (and cite it) and add anything else we want to point out.  But we will definitely need a succinct statement about how our paper moves well beyond what that paper did. Not sure best approach without reading the paper.-->
@@ -97,9 +97,7 @@ dp_med_occ_q123 <- quad_count_means$med_occ_total[1]
 
 ```
 
-To explore differences in species distribution and range between the two datasets, we plotted the distribution alignment (where on the map) against the ratio of extent (how much of the map) for each shared species (Fig. 2A). 
-
-A general negative linear pattern emerges, <!--BSH: Any stats for this? If so, insert just after this phrase. Otherwise maybe phrase it as 'The general pattern that emerges of a negative linear relationship, where increasing similarity...'--> suggesting that increasing similarity in extent correlates with decreasing distribution alignment. <!--BSH: Could also be said as increasing similarity in alignment leads to decreasing similarity in extent.  The phrasing implies causality, even though you are careful to use ‘correlates’--> AquaMaps tends to extrapolate species ranges beyond known occurrences, such that the marginal range predicted by AquaMaps will fall in different locations than the marginal range predicted using IUCN methodology. For species with dissimilar extents, predicted distribution for the smaller range can more easily fall within the generous bounds of the larger range. For species with increasingly similar extents, differences in methodology become more difficult to "hide," and the distribution alignment generally becomes poorer.
+To explore differences in species distribution and range between the two datasets, we plotted the distribution alignment (where on the map) against the ratio of extent (how much of the map) for each shared species (Fig. 2A). A general negative linear pattern emerges, <!--BSH: Any stats for this? If so, insert just after this phrase. Otherwise maybe phrase it as 'The general pattern that emerges of a negative linear relationship, where increasing similarity...'--> suggesting that increasing similarity in extent correlates with decreasing distribution alignment. <!--BSH: Could also be said as increasing similarity in alignment leads to decreasing similarity in extent.  The phrasing implies causality, even though you are careful to use ‘correlates’--> AquaMaps tends to extrapolate species ranges beyond known occurrences, such that the marginal range predicted by AquaMaps will fall in different locations than the marginal range predicted using IUCN methodology. For species with dissimilar extents, predicted distribution for the smaller range can more easily fall within the generous bounds of the larger range. For species with increasingly similar extents, differences in methodology become more difficult to "hide," and the distribution alignment generally becomes poorer.
 
 By dividing the map-paired species into quadrants, we highlight different categories of relationships that in turn help further explain the general pattern. The upper right quadrant includes species (n = `r n_q1`) whose described ranges agree in both spatial distribution and extent. These species tend to be well-studied and include wide-ranging pelagic organisms such as marine mammals, tunas, and billfishes (Fig. 2B). This result is not surprising, as species with very large ranges are likely to be more aligned regardless of methodology simply because they exist nearly everywhere.
 
@@ -138,9 +136,9 @@ AquaMaps and IUCN range maps provide important spatial information on marine spe
 
 __Suggestions for data providers:__
 
-* The IUCN Red List instructional materials for mapping marine species suggest that "bathymetry can be used to delineate species' ranges limited by depth in the same way as elevation is used for terrestrial species" (REF https://www.conservationtraining.org/mod/scorm/player.php?a=1412&currentorg=M5L1_ORG&scoid=6492).  Unfortunately, this recommendation appears to be applied inconsistently.  Especially for demersal communities dependent on photosynthesis, bathymetry should be a primary consideration; even a simple cutoff at the photosynthetic limit of 200 meters would minimize a likely source of commission errors.
-* The AquaMaps model is a powerful tool for quickly estimating species distribution based on limited information; however, the model's output is only as good as the input data, which for marine species is often sorely limited.  AquaMaps encourages experts to review and comment on the predicted species distribution maps; lessons from the small sample of reviewed maps can be generalized, for example to other species in the same taxonomic group, to further refine the predictions.  This is especially important for data-poor species.
-* In addition to environmental preferences and conditions, AquaMaps mapping parameters include area restrictions to help limit over-extrapolation of AquaMaps models.  Currently the area restrictions are denoted by FAO Major Fishing Areas (REF find a reference in AquaMaps somewhere); however, area restrictions based on biogeographical criteria, e.g. Marine Ecoregions of the World (REF), would likely provide better resolution and predictive power, especially for data-poor species.
+* The IUCN Red List instructional materials for mapping marine species suggest that "bathymetry can be used to delineate species' ranges limited by depth in the same way as elevation is used for terrestrial species" (IUCN 2015).  Unfortunately, this recommendation appears to be applied inconsistently.  Especially for demersal communities dependent on photosynthesis, bathymetry should be a primary consideration; even a simple cutoff at the photosynthetic limit of 200 meters would minimize a likely source of commission errors.
+* The AquaMaps model is a powerful tool for quickly estimating species distribution based on limited information; however, the model's output is only as good as the input data, which for marine species is often sorely limited.  AquaMaps encourages experts to review and comment on the predicted species distribution maps; lessons from the small sample of reviewed maps could be generalized, for example to other species in the same taxonomic group, to further refine the predictions.  This is especially important for data-poor species.
+* In addition to environmental preferences and conditions, AquaMaps mapping parameters include area restrictions to help limit over-extrapolation of AquaMaps models.  Currently area restrictions are denoted by UN Food and Agriculture Organisation (FAO) fisheries reporting areas (Ready et al. 2010); however, area restrictions based on biogeographical criteria, e.g. Marine Ecoregions of the World (Spalding et al. 2007), would likely provide better resolution and predictive power, especially for data-poor species.
 
 __Suggestions for data users:__
 
