--- a/ms_3_methods.Rmd
+++ b/ms_3_methods.Rmd
@@ -21,14 +21,6 @@ We visually inspected a random selection of paired distribution maps from each q
 Using methods and supplemental materials from OHI (Halpern et al. 2012, 2015), we modified the original code for OHI 2015 Species status (SPP) (REF), allowing for flexibility in prioritized data source and AquaMaps presence threshold.  We ran the SPP code three times, prioritizing IUCN over AquaMaps for a 0% threshold, and prioritizing AquaMaps over IUCN for both a 40% and 0% threshold.  We compared each of these to the output of the published OHI 2015 SPP model (prioritizing IUCN over AquaMaps at a 40% threshold).
 
 **Methods for MPA Gap Analysis case study:** 
-Based upon the methods described in Klein et al. 2015, we reconstructed the analysis using the subset of protected areas spatially covering a marine area and classified as IUCN I-IV ___(Klein paper, table 1, subset 4 - seems to be the one they focus on the most)___, converting the World Database of Protected Areas (WDPA, REF) dataset to a raster of 0.5° cells indicating proportion of protected area within the cell ___(consider also: filter on STATUS == 'Designated', and filter out those pesky fishery management areas and manatee speed zones...)___.  To verify our reconstruction we ran the analysis using the AquaMaps dataset available in April 2015 (REF) at a presence threshold of 50%.  We then updated the analysis using the most recent AquaMaps dataset (REF?) at 50% threshold
+Based upon the methods described in Klein et al. 2015, we reconstructed the analysis using the subset of protected areas (WDPA 2014) spatially covering a marine area and classified as IUCN I-IV. The WDPA polygons and marine polygons were rasterized to 0.01° and then aggregated to AquaMaps native 0.5° cells, to calculate proportion of protected area and marine within each cell.  After verifying our results using the 2014 AquaMaps dataset, we updated the analysis using the 2015 AquaMaps dataset at a presence threshold of 50% (to compare to Klein et al. directly) and 0% (to better compare with IUCN spatial data).  To analyze MPA coverage against IUCN spatial data, we extracted IUCN polygon weights per 0.5° cell for each species and compared against the protected area raster.  Finally, we combined AquaMaps data (at 0% threshold) and IUCN data, using AquaMaps for the `r n_spp_both` overlapping species and again compared against the protected area raster.
 
-* Possible analyses: <!--BSH: priorities are 1 (AM only), 3 (IUCN only) and 4 (AM + IUCN).-->
-    * run AquaMaps (new data) with threshold at 0%
-        * already done in original paper for old data, but redo it to compare to AM + IUCN scenario below
-    * run with IUCN maps only in place of AquaMaps? _<!--BSH: this seems a bit silly, since AM has so many more species, but worth doing to make the point, I think.-->_
-    * run with AquaMaps and IUCN both, using 0% threshold; which preferred? _<!--BSH: I think this would be good to do, with AM as priority.  We can then compare to AM only, as you note above.  This tells us exactly what is gained by including the additional 1500 species (or whatever) that are only in IUCN.-->_
-* Which aspects of the analysis should we focus on?: _<!--BSH: I’m guessing it will be hard to see differences in the maps (except for the IUCN only example), so probably best to focus on figure 1 presentation of results.-->_
-    * overall vs broken down by taxonomic groups? (see paper, figure 1)
-    * spatial distribution of gap species (see paper, figure 2) <!--
-
+All processing was completed in R (REF), and all code and intermediate data are available on GitHub (REF?) at https://github.com/OHI-Science/IUCN-AquaMaps.
