--- a/manuscript-main.Rmd
+++ b/manuscript-main.Rmd
@@ -2,7 +2,6 @@
 title: "Aligning marine species range data to better serve science and conservation"
 author: "Casey O'Hara^1^, Jamie Afflerbach^1^, Benjamin S. Halpern<sup>1, 2, 3</sup>"
 output:
-  word_document: default
   pdf_document:
     number_sections: yes
     toc: no
@@ -11,6 +10,7 @@ output:
     number_sections: yes
     theme: spacelab
     toc: no
+  word_document: default
 ---
 
 <!--Title: Titles should be no more than three typeset lines (generally 135 characters including spaces) and should be comprehensible to a broad scientific audience. Please provide a short title of fewer than 50 characters for mobile devices and RSS feeds.-->
@@ -83,19 +83,35 @@ spp_map_pairs <- read_csv(data_file)
 
 ### generate other lists
 spp_all_file <- 'data/spp_all.csv'
-spp_all <- read_csv(spp_all_file)
+spp_all <- read_csv(spp_all_file) ### NOTE: contains duped scinames
 
 # iucn_marine_file <- 'data/spp_iucn_marine.csv'
 # spp_iucn_marine <- read_csv(iucn_marine_file) 
 
 iucn_maps_file <- 'data/spp_iucn_maps.csv'
-spp_iucn_maps <- read_csv(iucn_maps_file)
+spp_iucn_maps <- read_csv(iucn_maps_file) %>%
+  filter(!duplicated(iucn_sid))
 
 spp_am_file <- 'data/spp_am.csv'
 spp_am <- read_csv(spp_am_file)
 
 ```
 
+-----
+
+``` {r calc species numbers, echo = FALSE}
+n_spp_all    <- nrow(spp_am) + nrow(spp_iucn_maps) - nrow(spp_map_pairs)
+n_spp_am     <- nrow(spp_am)
+n_spp_am_rev <- nrow(spp_am %>% filter(reviewed == 1))
+n_spp_iucn   <- nrow(spp_iucn_maps)
+n_spp_both   <- nrow(spp_map_pairs)
+
+p_spp_am     <- round(n_spp_am/n_spp_all * 100, 1)
+p_spp_am_rev <- round(n_spp_am_rev/n_spp_am * 100, 1)
+p_both_am    <- round(n_spp_both/n_spp_am   * 100, 1)
+p_both_iucn  <- round(n_spp_both/n_spp_iucn * 100, 1)
+p_both_all   <- round(n_spp_both/n_spp_all  * 100, 1)
+```
 -----
 
 ``` {r abstract, child = 'ms_1_abst_sig.Rmd'}
